# terrarium_simulator

./: README.md
course/: CMakeLists.txt  README.md
course/include/: ant.h  cell.h  cell_mock.h  cellmap.h  doodlebug.h  environment.h  insect.h  insects_metrics.h  simulation_runner.h
course/src/: ant.cc  cell.cc  cell_mock.cc  cellmap.cc  doodlebug.cc  environment.cc  environment.ccc  insect.cc  main.cc  simulation_runner.cc
course/test/: CMakeLists.txt
course/test/src/: Ant_TEST.cc  CMakeLists.txt  CellMap_TEST.cc  Cell_TEST.cc  Doodlebug_TEST.cc  Environment_TEST.cc  SimulationRunner_TEST.cc
